복사 모달 완성

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
     /* 14px 0.785rem */
     /* 18px 1.125rem */
     /* 24px 1.5rem */
+    /* 32px 2rem */
+    /* 36px 2.25rem */
 
     --main-title-font-size: 1.5rem; /* 24px */
     --main-subTitle-font-size: 1.125rem; /* 18px */
